4.0.0 (2022-10-07)
------------------

Version 4.0.0 migrates the underlying Redis library from ``aioredis`` to ``redis-py``.
(``aioredis`` was retired and moved into ``redis-py``, which will host the ongoing development.)

Version 4.0.0 should be compatible with existing Channels 3 projects, as well as Channels 4
projects.

* Migrated from ``aioredis`` to ``redis-py``. Specifying hosts as tuples is no longer supported.
  If hosts are specified as dicts, only the ``address`` key will be taken into account, i.e.
  a `password`` must be specified inline in the address.

* Added support for passing kwargs to sentinel connections.

* Updated dependencies and obsolete code.

3.4.1 (2022-07-12)
------------------

* Fixed RuntimeError when checking for stale connections.


3.4.0 (2022-03-10)
------------------

* Dropped support for Python 3.6, which is now end-of-life, and added CI
  testing for Python 3.10. (#301).

* Added serialize and deserialize hooks to RedisPubSubChannelLayer (#281).

* Fixed iscoroutine check for pubsub proxied methods (#297).

* Fix workers support when using Redis PubSub layer (#298)


3.3.1 (2021-09-30)
------------------

Two bugfixes for the PubSub channel layer:

* Scoped the channel layer per-event loop, in case multiple loops are in play
  (#262).

* Ensured consistent hashing PubSub was maintained across processes, or process
  restarts (#274).


3.3.0 (2021-07-01)
------------------

Two important new features:

* You can now connect using `Redis Sentinel
  <https://redis.io/topics/sentinel>`. Thanks to @qeternity.

* There's a new ``RedisPubSubChannelLayer`` that uses Redis Pub/Sub to
  propagate messages, rather than managing channels and groups directly within
  the layer. For many use-cases this should be simpler, more robust, and more
  performant.

  Note though, the new ``RedisPubSubChannelLayer`` layer does not provide all
  the options of the existing layer, including ``expiry``, ``capacity``, and