@@ -25,7 +25,8 @@ async def channel_layer():
     """
     channel_layer = RedisPubSubChannelLayer(hosts=TEST_HOSTS)
     yield channel_layer
-    await channel_layer.flush()
+    async with async_timeout.timeout(1):
+        await channel_layer.flush()
 
 
 @pytest.mark.asyncio
